[package]
name = "connector"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[dependencies]
jni = "0.17"
rinimp3 = { git = "https://github.com/Gelbpunkt/rinimp3" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
